--- a/MaterialMe/app/build.gradle
+++ b/MaterialMe/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.ngamolsky.android.materialme"
@@ -20,8 +19,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:24.1.1'
+    implementation 'com.android.support:recyclerview-v7:24.1.1'
+    implementation 'com.android.support:design:24.1.1'
+    implementation 'com.android.support:cardview-v7:24.1.1'
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
 }
